--- a/pixit-admin/examples/monetization.html
+++ b/pixit-admin/examples/monetization.html
@@ -2,11 +2,11 @@
 =========================================================
 * Argon Dashboard - v1.2.0
 =========================================================
-* Product Page: https://www.creative-tim.com/product/argon-dashboard
+* Product Page: https://www.Pixit.com/product/argon-dashboard
 
 
-* Copyright  Creative Tim (http://www.creative-tim.com)
-* Coded by www.creative-tim.com
+* Copyright  Pixit (http://www.Pixit.com)
+* Coded by www.Pixit.com
 
 
 
@@ -20,7 +20,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
-  <meta name="author" content="Creative Tim">
+  <meta name="author" content="Pixit">
   <title>Pixit - Digitize and Monitize your Photo Archives</title>
   <!-- Favicon -->
   <link rel="icon" href="../assets/img/brand/favicon.png" type="image/png">
@@ -107,25 +107,25 @@
           <!-- Navigation -->
           <!-- <ul class="navbar-nav mb-md-3">
             <li class="nav-item">
-              <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/getting-started/overview.html" target="_blank">
+              <a class="nav-link" href="https://demos.Pixit.com/argon-dashboard/docs/getting-started/overview.html" target="_blank">
                 <i class="ni ni-spaceship"></i>
                 <span class="nav-link-text">Getting started</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/foundation/colors.html" target="_blank">
+              <a class="nav-link" href="https://demos.Pixit.com/argon-dashboard/docs/foundation/colors.html" target="_blank">
                 <i class="ni ni-palette"></i>
                 <span class="nav-link-text">Foundation</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/components/alerts.html" target="_blank">
+              <a class="nav-link" href="https://demos.Pixit.com/argon-dashboard/docs/components/alerts.html" target="_blank">
                 <i class="ni ni-ui-04"></i>
                 <span class="nav-link-text">Components</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/plugins/charts.html" target="_blank">
+              <a class="nav-link" href="https://demos.Pixit.com/argon-dashboard/docs/plugins/charts.html" target="_blank">
                 <i class="ni ni-chart-pie-35"></i>
                 <span class="nav-link-text">Plugins</span>
               </a>
@@ -533,7 +533,7 @@
             </div>
             <div class="card-body">
               <!-- Chart -->
-              <div class="chart">
+              <div id="line-chart" class="chart">
                 <!-- Chart wrapper -->
                 <canvas id="chart-sales-dark" class="chart-canvas"></canvas>
               </div>
@@ -560,12 +560,12 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xl-8">
+        <div class="col-xl-12">
           <div class="card">
             <div class="card-header border-0">
               <div class="row align-items-center">
                 <div class="col">
-                  <h3 class="mb-0">Page visits</h3>
+                  <h3 class="mb-0">Photo visits</h3>
                 </div>
                 <div class="col text-right">
                   <a href="#!" class="btn btn-sm btn-primary">See all</a>
@@ -577,7 +577,7 @@
               <table class="table align-items-center table-flush">
                 <thead class="thead-light">
                   <tr>
-                    <th scope="col">Page name</th>
+                    <th scope="col">Keyword</th>
                     <th scope="col">Visitors</th>
                     <th scope="col">Unique users</th>
                     <th scope="col">Bounce rate</th>
@@ -586,7 +586,7 @@
                 <tbody>
                   <tr>
                     <th scope="row">
-                      /argon/
+                      World War II
                     </th>
                     <td>
                       4,569
@@ -600,7 +600,7 @@
                   </tr>
                   <tr>
                     <th scope="row">
-                      /argon/index.html
+                      New York City
                     </th>
                     <td>
                       3,985
@@ -614,7 +614,7 @@
                   </tr>
                   <tr>
                     <th scope="row">
-                      /argon/charts.html
+                      University
                     </th>
                     <td>
                       3,513
@@ -628,7 +628,7 @@
                   </tr>
                   <tr>
                     <th scope="row">
-                      /argon/tables.html
+                      Mountains
                     </th>
                     <td>
                       2,050
@@ -642,7 +642,7 @@
                   </tr>
                   <tr>
                     <th scope="row">
-                      /argon/profile.html
+                      Animals
                     </th>
                     <td>
                       1,795
@@ -659,7 +659,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-4">
+        <!-- <div class="col-xl-4">
           <div class="card">
             <div class="card-header border-0">
               <div class="row align-items-center">
@@ -671,9 +671,9 @@
                 </div>
               </div>
             </div>
-            <div class="table-responsive">
+            <div class="table-responsive"> -->
               <!-- Projects table -->
-              <table class="table align-items-center table-flush">
+              <!-- <table class="table align-items-center table-flush">
                 <thead class="thead-light">
                   <tr>
                     <th scope="col">Referral</th>
@@ -778,30 +778,29 @@
                     </td>
                   </tr>
                 </tbody>
-              </table>
+              </table> 
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
       <!-- Footer -->
       <footer class="footer pt-0">
         <div class="row align-items-center justify-content-lg-between">
           <div class="col-lg-6">
             <div class="copyright text-center  text-lg-left  text-muted">
-              &copy; 2020 <a href="https://www.creative-tim.com" class="font-weight-bold ml-1" target="_blank">Creative
-                Tim</a>
+              &copy; 2020 <a href="https://www.Pixit.com" class="font-weight-bold ml-1" target="_blank">Pixit</a>
             </div>
           </div>
           <div class="col-lg-6">
             <ul class="nav nav-footer justify-content-center justify-content-lg-end">
               <li class="nav-item">
-                <a href="https://www.creative-tim.com" class="nav-link" target="_blank">Creative Tim</a>
+                <a href="https://www.Pixit.com" class="nav-link" target="_blank">Pixit</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.creative-tim.com/presentation" class="nav-link" target="_blank">About Us</a>
+                <a href="https://www.Pixit.com/presentation" class="nav-link" target="_blank">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="http://blog.creative-tim.com" class="nav-link" target="_blank">Blog</a>
+                <a href="http://blog.Pixit.com" class="nav-link" target="_blank">Blog</a>
               </li>
               <li class="nav-item">
                 <a href="https://github.com/creativetimofficial/argon-dashboard/blob/master/LICENSE.md" class="nav-link"
