--- a/pixit-admin/examples/add-photos-mock copy.html
+++ b/pixit-admin/examples/add-photos-mock copy.html
@@ -412,9 +412,6 @@
       <div class="row">
         <div class="col">
           <div id="video-container" class="card border-0" style="min-height: 400px; padding: 1rem">
-            <iframe src="https://d1b0tccrrh1bg5.cloudfront.net/" width="100%" height="400px" frameborder="0"></iframe>
-          </div>
-          <!-- <div id="video-container" class="card border-0" style="min-height: 400px; padding: 1rem">
             <div style="display: flex; justify-content: center; align-items: center; height: 400px;">
               + Add Photos Here
             </div>
@@ -426,7 +423,7 @@
               `
             }, 2000)
 
-          </script> -->
+          </script>
         </div>
       </div>
       <!-- Footer -->
